<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="@drawable/coffee">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/customer_name_et"
        android:layout_marginLeft="10dp"
        android:hint="@string/name"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:inputType="textCapWords"/>

    <TextView

        android:padding="10dp"
        android:text="@string/toppings"
        android:textColor="#ffffff"
        android:textStyle="bold"
        style="@style/HeaderTextStyle"/>


        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:buttonTint="#ffffff"
            android:textColor="#ffffff"
            android:layout_marginLeft="7dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingLeft="24dp"/>


    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textColor="#ffffff"
        android:layout_marginLeft="7dp"
        android:buttonTint="#ffffff"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingLeft="24dp"/>



    <TextView
        style="@style/HeaderTextStyle"
        android:padding="10dp"
        android:text="@string/quantity"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:onClick="Decrement"
            android:text="-"
            android:textColor="#000000"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/initial_quantity_value"
            android:textColor="#ffffff"
            android:textSize="16sp" />


        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:onClick="Increment"
            android:text="+"
            android:textColor="#000000"
            android:textSize="20sp" />


    </LinearLayout>





    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="submitOrder"
        android:text="@string/quantity"
        android:textColor="#000000"
        android:textAllCaps="false"
        android:textSize="25sp" />


</LinearLayout>


</ScrollView>